SNS/Lab 8/SNS Lab 08/IpTables_Rules Files/iptabless_4rulesave.txt
# Generated by iptables-save v1.6.0 on Sat Nov 27 22:34:57 2021
*filter
:INPUT ACCEPT [367:25640]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [192:20608]
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -j DROP
-A INPUT -s 192.168.122.1/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 192.168.122.188/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -p udp -j DROP
-A OUTPUT -d 129.79.78.234/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 129.79.78.234/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 129.79.78.235/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 129.79.78.235/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j DROP
-A OUTPUT -p tcp -m tcp --dport 80 -j DROP
COMMIT
# Completed on Sat Nov 27 22:34:57 2021
